chore: refactor the applepay example

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,5 @@
 name: Deploy
-
+run-name: ${{github.actor}} is deploying applepay test app 
 on:
   push:
     branches:
@@ -10,11 +10,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: akhileshns/heroku-deploy@v3.8.9 
+      - uses: akhileshns/heroku-deploy@v3.12.14 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}} 
           heroku_app_name: applepay-paypal-js-sdk # Must be unique in Heroku
-          heroku_email: ${{secrets.HEROKU_EMAIL}} 
+          heroku_email: ${{secrets.HEROKU_EMAIL}}
+          appdir: "advanced-integration"
+          healthcheck: "https://applepay-paypal-js-sdk.herokuapp.com/health"
           usedocker: true
           docker_build_args: |
             NODE_ENV
