--- a/advanced-integration/.eslintrc.json
+++ b/advanced-integration/.eslintrc.json
@@ -7,7 +7,8 @@
     "es6": true
   },
   "parserOptions": {
-    "ecmaVersion": 2020
+    "ecmaVersion": 2020,
+    "sourceType": "module"
   },
   "globals": {
     "paypal": true,
