--- a/advanced-integration/package.json
+++ b/advanced-integration/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "author": "",
   "license": "Apache-2.0",
@@ -15,5 +16,8 @@
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "node-fetch": "^3.2.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.22.0"
   }
 }
