chore: update appdir for lint workflow

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,6 +9,7 @@ jobs:
     - uses: actions/setup-node@v1
       with:
         node-version: '16.x'
+        appdir: "advanced-integration"
     - name: Install JS Dependencies
       run: npm install
     - name: Run ESLint
