--- a/advanced-integration/Dockerfile
+++ b/advanced-integration/Dockerfile
@@ -8,6 +8,6 @@ ARG CLIENT_SECRET
 ENV CLIENT_ID=$CLIENT_ID
 ENV CLIENT_SECRET=$CLIENT_SECRET
 
-RUN npm ci && npm cache clean --force --verbose
+RUN npm ci --verbose && npm cache clean --force --verbose
 
 CMD ["node", "server.js"]
