--- a/advanced-integration/Dockerfile
+++ b/advanced-integration/Dockerfile
@@ -3,10 +3,12 @@ FROM node:16
 ARG CLIENT_ID
 ARG CLIENT_SECRET
 ARG NODE_ENV
+ARG APP_SECRET
 
 ENV CLIENT_ID=$CLIENT_ID
 ENV CLIENT_SECRET=$CLIENT_SECRET
 ENV NODE_ENV=$NODE_ENV
+ENV APP_SECRET=$APP_SECRET
 
 WORKDIR /app
 COPY package.json ./
