--- a/advanced-integration/Dockerfile
+++ b/advanced-integration/Dockerfile
@@ -2,6 +2,7 @@ FROM node:16
 
 ARG CLIENT_ID
 ARG CLIENT_SECRET
+ARG MERCHANT_ID
 ARG NODE_ENV
 ARG APP_SECRET
 
@@ -9,6 +10,7 @@ ENV CLIENT_ID=$CLIENT_ID
 ENV CLIENT_SECRET=$CLIENT_SECRET
 ENV NODE_ENV=$NODE_ENV
 ENV APP_SECRET=$APP_SECRET
+ENV MERCHANT_ID=$MERCHANT_ID
 
 WORKDIR /app
 COPY package.json ./
