--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,10 @@ jobs:
             CLIENT_ID
             APP_SECRET
             CLIENT_SECRET
+            MERCHANT_ID
         env:
           NODE_ENV: staging
           CLIENT_ID: ${{secrets.CLIENT_ID}}
           APP_SECRET: ${{secrets.APP_SECRET}}
           CLIENT_SECRET: ${{secrets.CLIENT_SECRET}}
+          MERCHANT_ID: ${{secrets.MERCHANT_ID}}
