chore: code cleanup

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
         "appdir",
         "appl",
         "buttonstyle",
+        "onpaymentauthorized",
+        "onpaymentmethodselected",
+        "onvalidatemerchant",
         "usedocker"
     ]
 }
