--- a/advanced-integration/Dockerfile
+++ b/advanced-integration/Dockerfile
@@ -1,15 +1,15 @@
 FROM node:16
 
-ARG PAYPAL_CLIENT_ID
+ARG CLIENT_ID
 ARG PAYPAL_CLIENT_SECRET
 ARG MERCHANT_ID
 ARG NODE_ENV
-ARG PAYPAL_APP_SECRET
+ARG APP_SECRET
 
-ENV PAYPAL_CLIENT_ID=$PAYPAL_CLIENT_ID
+ENV CLIENT_ID=$CLIENT_ID
 ENV PAYPAL_CLIENT_SECRET=$PAYPAL_CLIENT_SECRET
 ENV NODE_ENV=$NODE_ENV
-ENV PAYPAL_APP_SECRET=$PAYPAL_APP_SECRET
+ENV APP_SECRET=$APP_SECRET
 ENV MERCHANT_ID=$MERCHANT_ID
 
 WORKDIR /app
