Removed kill-port from package and updated devconatiner file

--- a/advanced-integration/Dockerfile
+++ b/advanced-integration/Dockerfile
@@ -1,13 +1,13 @@
 FROM node:16
 
 ARG CLIENT_ID
-ARG PAYPAL_CLIENT_SECRET
+ARG CLIENT_SECRET
 ARG MERCHANT_ID
 ARG NODE_ENV
 ARG APP_SECRET
 
 ENV CLIENT_ID=$CLIENT_ID
-ENV PAYPAL_CLIENT_SECRET=$PAYPAL_CLIENT_SECRET
+ENV CLIENT_SECRET=$CLIENT_SECRET
 ENV NODE_ENV=$NODE_ENV
 ENV APP_SECRET=$APP_SECRET
 ENV MERCHANT_ID=$MERCHANT_ID
