--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,7 +5,7 @@
   "image": "mcr.microsoft.com/devcontainers/javascript-node:20",
   "postCreateCommand": "npm install",
   "postAttachCommand": {
-    "Start server": "npx kill-port 8080 && npm start"
+    "Start server": "CI=true npx kill-port --yes 8080 && npm start"
   },
   "forwardPorts": [
     8080
