--- a/advanced-integration/Dockerfile
+++ b/advanced-integration/Dockerfile
@@ -1,16 +1,14 @@
 FROM node:16
 
-ARG CLIENT_ID
-ARG CLIENT_SECRET
-ARG MERCHANT_ID
+ARG PAYPAL_CLIENT_ID
+ARG PAYPAL_CLIENT_SECRET
+ARG PAYPAL_MERCHANT_ID
 ARG NODE_ENV
-ARG APP_SECRET
 
-ENV CLIENT_ID=$CLIENT_ID
-ENV CLIENT_SECRET=$CLIENT_SECRET
+ENV PAYPAL_CLIENT_ID=$PAYPAL_CLIENT_ID
+ENV PAYPAL_CLIENT_SECRET=$PAYPAL_CLIENT_SECRET
 ENV NODE_ENV=$NODE_ENV
-ENV APP_SECRET=$APP_SECRET
-ENV MERCHANT_ID=$MERCHANT_ID
+ENV PAYPAL_MERCHANT_ID=$PAYPAL_MERCHANT_ID
 
 WORKDIR /app
 COPY package.json ./
