--- a/advanced-integration/.env.example
+++ b/advanced-integration/.env.example
@@ -1,7 +1,7 @@
 # Create an application to obtain credentials at
 # https://developer.paypal.com/dashboard/applications/sandbox
 
-CLIENT_ID="YOUR_PAYPAL_CLIENT_ID_GOES_HERE"
-APP_SECRET="YOUR_SECRET_GOES_HERE"
-MERCHANT_ID="YOUR_MERCHANT_ID_GOES_HERE"
+PAYPAL_CLIENT_ID="YOUR_PAYPAL_CLIENT_ID_GOES_HERE"
+PAYPAL_CLIENT_SECRET="YOUR_SECRET_GOES_HERE"
+PAYPAL_MERCHANT_ID="YOUR_MERCHANT_ID_GOES_HERE"
 ```
